syntax = "proto3";
package kurtosis_enclave_manager;
// NOTE: It sucks that we have this Go-specific logic inside this file (which should be language-agnostic). However, the Protobuf team have
// taken a hard stance on this being the way it should be done, so we have to do it this way.
option go_package = "github.com/kurtosis-tech/kurtosis/enclave-manager/api/golang/kurtosis_enclave_manager_api_bindings";

import "google/protobuf/empty.proto";
import "engine_service.proto";
import "api_container_service.proto";

service KurtosisEnclaveManagerServer {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc GetEnclaves(google.protobuf.Empty) returns (engine_api.GetEnclavesResponse) {};
  rpc GetServices(google.protobuf.Empty) returns (api_container_api.GetServicesResponse) {};
  rpc CreateEnclave(google.protobuf.Empty) returns (google.protobuf.Empty) {};
  rpc GetServiceLogs(google.protobuf.Empty) returns (google.protobuf.Empty) {};
  rpc RunStarlarkPackage(google.protobuf.Empty) returns (google.protobuf.Empty) {};
  rpc ListFilesArtifactNamesAndUuids(google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

message GetServicesRequest{

  string apic_ip_address = 1;
  int32 apic_port = 2;

}
